# APF-Paper-3-Ledgers-Entropy-Time-Cost

./: APF_Reviewer_Walkthrough.ipynb  Paper_3_Ledgers_Entropy_Time_Cost_Supplement_v1.1.tex  Paper_3_Ledgers_Entropy_Time_Cost_v3.2.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  derivation_graph.json  pyproject.toml  repo_map.json  run_checks.py  theorems.json  zenodo.json
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json  theorems.json
apf/: __init__.py  bank.py  core.py
docs/: index.html
