[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apf-paper3"
version = "3.2"
description = "Ledgers Entropy Time Cost — executable mathematical appendix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Ethan Brooke", email = "brooke.ethan@gmail.com"}
]
keywords = ["entropy", "arrow of time", "CPTP maps", "horizon entropy", "Bekenstein-Hawking", "cosmogenesis", "Fisher information", "ledger accounting", "admissibility carrying capacity"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20", "scipy>=1.7"]

[project.urls]
Homepage = "https://github.com/Ethan-Brooke/APF-Paper-3-Ledgers-Entropy-Time-Cost"
"Bug Tracker" = "https://github.com/Ethan-Brooke/APF-Paper-3-Ledgers-Entropy-Time-Cost/issues"
"Zenodo" = "https://doi.org/10.5281/zenodo.18604844"

[tool.setuptools.packages.find]
include = ["apf*"]
